mostly visual changes + added 100ms initial delay

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
+    <head>
+            <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
     <body>
         <div id="logContainer"></div>
         <div id="dpsContainer"></div>
     </body>
+    <script type="module" src="./js/main.js"></script>
 </html>
-
-
-<script type="module" src="./js/main.js"></script>
