--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     </head>
     <body>
         <div id="stats">
-                <label for="ap">AP:</label>
-                <input type="number" id="ap" name="ap" min="0" value="0">
-                <label for="str">STR:</label>
-                <input type="number" id="str" name="str" min="0" value="200">
-                <label for="agi">AGI:</label>
-                <input type="number" id="agi" name="agi" min="0" value="200">
-                <label for="hit">HIT:</label>
-                <input type="number" id="hit" name="hit" min="0" value="3">
-                <label for="crit">CRIT:</label>
-                <input type="number" id="crit" name="crit" min="0" value="3">
-                <button id="restartBtn" type="button">Restart</button>
+            <label for="ap">AP</label>
+            <input type="number" id="ap" name="ap" min="0" value="0">
+            <label for="str">STR</label>
+            <input type="number" id="str" name="str" min="0" value="200">
+            <label for="agi">AGI</label>
+            <input type="number" id="agi" name="agi" min="0" value="200">
+            <label for="hit">HIT</label>
+            <input type="number" id="hit" name="hit" min="0" value="3">
+            <label for="crit">CRIT</label>
+            <input type="number" id="crit" name="crit" min="0" value="3">
         </div>
+        <button id="restartBtn" type="button">Restart</button>
         <div id="logContainer"></div>
         <div id="dpsContainer"></div>
     </body>
