--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
             <label for="crit">CRIT</label>
             <input type="number" id="crit" name="crit" min="0" value="3">
         </div>
+        <input type="checkbox" id="fastMode" name="fastMode">
+        <label for="fastMode">Fast</label>
         <button id="restartBtn" type="button">Restart</button>
         <div id="logContainer"></div>
         <div id="dpsContainer"></div>
+        <div id="rageContainer"></div>
     </body>
     <script type="module" src="./js/main.js"></script>
 </html>
