--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div id="stats">
-            <label for="ap">AP</label>
+            <label for="ap">Raw AP</label>
             <input type="number" id="ap" name="ap" min="0" value="0">
             <label for="str">STR</label>
             <input type="number" id="str" name="str" min="0" value="200">
@@ -18,6 +18,7 @@
         <input type="checkbox" id="fastMode" name="fastMode">
         <label for="fastMode">Fast</label>
         <button id="restartBtn" type="button">Restart</button>
+        <button id="pauseBtn" type="button">Pause</button>
         <div id="logContainer"></div>
         <div id="dpsContainer"></div>
         <div id="rageContainer"></div>
