--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <label for="crit">CRIT</label>
             <input type="number" id="crit" name="crit" min="0" value="20">
         </div>
+        <div id="items">
+            <label for "mhSelect">MH Weapon</label>
+            <select name="mhSelect" id="mhSelect">
+                <option value="empyrean" selected>Empyrean Demolisher</option>
+                <option value="ironfoe">Ironfoe</option>
+            </select>
+        </div>
         <input type="checkbox" id="fastMode" name="fastMode">
         <label for="fastMode">Fast</label>
         <button id="restartBtn" type="button">Restart</button>
