added checkbox to disable logging

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </div>
         <input type="checkbox" id="fastMode" name="fastMode">
         <label for="fastMode">Fast</label>
+        <input type="checkbox" id="disableLog" name="disableLog">
+        <label for="disableLog">Disable Log</label>
         <button id="restartBtn" type="button">Restart</button>
         <button id="pauseBtn" type="button">Pause</button>
         <div id="logContainer"></div>
