--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
                 <input type="number" id="hit" name="hit" min="0" value="0">
                 <label for="crit">Crit</label>
                 <input type="number" id="crit" name="crit" min="0" value="0">
+                <label for="haste">Haste</label>
+                <input type="number" id="haste" name="haste" min="1" value="1">
             </div>
             <div id="items">
                 <label for="race">Race</label>
-                <select id="race" name="race">
-                    <option value="0">Human</option>
-                </select>
+                <select id="race" name="race"></select>
             </div>
             <div id="myStats"></div>
-            <input type="checkbox" id="realtime" name="realtime" checked>
+            <input type="checkbox" id="realtime" name="realtime">
             <label for="realtime">Real-time</label>
             <button id="startBtn" type="button">Start</button>
         </div>
