disabled heroic strike during exec (for now) added ability to set a rage limit for bloodthirst during execute phase (if rage is less than limit, use bloodthirst instead of exec) changed default values on rage requirements to increase dps added option to load the settings used for a sim added doom's edge

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
             </div>
             <div id="ai_settings">
                 <label for="heroicstrikerr">Heroic Strike Rage Req.</label>
-                <input type="number" id="heroicstrikerr" name="heroicstrikerr" min="0" max="100" value="60">
+                <input type="number" id="heroicstrikerr" name="heroicstrikerr" min="0" max="100" value="50">
                 <label for="hamstringrr">Hamstring Rage Req.</label>
-                <input type="number" id="hamstringrr" name="hamstringrr" min="0" max="100" value="50">
+                <input type="number" id="hamstringrr" name="hamstringrr" min="0" max="100" value="30">
+                <label for="bloodthirstexecrl">Bloodthirst in exec if rage less</label>
+                <input type="number" id="bloodthirstexecrl" name="bloodthirstexecrl" min="0" max="100" value="70">
             </div>
             <div id="fight_settings">
                 <label for="fightlength">Avg. Fight Length (seconds)</label>
